force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/BMCServiceDesk__SRM_RequestDetail__c.object-meta.xml
<CustomObject>
    <description>Stores the details of a service request that is submitted by a user.</description>
    <label>Request Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Request Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>