force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/fields/BMCServiceDesk__ApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>