force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/fields/BMCServiceDesk__FKIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
    <relationshipLabel>Incident</relationshipLabel>
    <relationshipName>Request_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>