force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/fields/BMCServiceDesk__FKRequestDefinition__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKRequestDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Definition</label>
    <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
    <relationshipName>RequestDefinition</relationshipName>
    <type>Lookup</type>
</CustomField>