force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/fields/BMCServiceDesk__Prefix_the_Prompt_Question_to_user_input__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Prefix_the_Prompt_Question_to_user_input__c</fullName>
    <formula>BMCServiceDesk__FKRequestDefinition__r.BMCServiceDesk__Prefix_Prompt_to_user_input__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prefix the Prompt/Question to user input</label>
    <type>Checkbox</type>
</CustomField>