force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/fields/BMCServiceDesk__PriceOption2__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PriceOption2__c</fullName>
    <label>Price Option2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>