force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/fields/BMCServiceDesk__Submitted__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>