force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/fields/BMCServiceDesk__Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Total_Cost__c</fullName>
    <formula>BMCServiceDesk__DeliveryCost__c *  BMCServiceDesk__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>