force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/validationRules/BMCServiceDesk__dateRequiredLaterthanCurrentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__dateRequiredLaterthanCurrentDate</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() &amp;&amp; BMCServiceDesk__DateRequired__c &lt;= NOW()) ||( ISCHANGED(BMCServiceDesk__DateRequired__c) &amp;&amp;  BMCServiceDesk__DateRequired__c &lt;= NOW())</errorConditionFormula>
    <errorMessage>The Date Required should not be earlier than the current date and time</errorMessage>
</ValidationRule>