force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetail__c/validationRules/BMCServiceDesk__Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Quantity_Required</fullName>
    <active>true</active>
    <errorConditionFormula>BMCServiceDesk__Quantity__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>BMCServiceDesk__Quantity__c</errorDisplayField>
    <errorMessage>Quantity should be greater than zero</errorMessage>
</ValidationRule>